--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-# REACT_APP_API_KEY=at_it2ndWSHc1IzUlLYOTUWInTESSkwD
- 
- VITE_REACT_APP_API_KEY= at_it2ndWSHc1IzUlLYOTUWInTESSkwD
+#  VITE_REACT_APP_API_KEY= at_it2ndWSHc1IzUlLYOTUWInTESSkwD
+
+
+VITE_REACT_APP_API_KEY= 0e3e92a15850417fbcc14613856887ca
