--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ dist-ssr
 # Environment variables
 *.env
 
+# Text files
+*.txt
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
